--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,11 @@
+// 플러그인 저장소 설정
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        mavenCentral()
+        maven { url 'https://repo.spring.io/milestone' }
+        maven { url 'https://repo.spring.io/snapshot' }
+    }
+}
+
 rootProject.name = 'assetmanager'
