feat: MyBatis Mapper 테스트 환경 구축 및 기초 테스트 생성
- H2 인메모리 데이터베이스 테스트 환경 구축
- application-test.yml 및 schema.sql 생성
- Domain 클래스들을 database-schema.md에 맞춰 수정
  * User, Asset, Transaction, PriceHistory, ApiKey, PortfolioSnapshot
  * 누락된 필드 추가: createdAt, updatedAt, profileImageUrl 등
- UserMapper, AssetMapper 메서드 누락 부분 보완
- UserMapperTest, AssetMapperTest 생성 (총 34개 테스트)
- Spring 컨텍스트 로딩 문제 해결
  * @MapperScan 어노테이션 추가
  * MyBatis configuration 충돌 해결
- 15/15 UserMapperTest 중 12개 성공, 3개 실패 (수정 예정)

Phase 2.3: MyBatis Mapper 구현 - 테스트 환경 구축 완료

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,9 +29,10 @@ spring:
 
 # MyBatis 설정
 mybatis:
-  config-location: classpath:mybatis-config.xml
   mapper-locations: classpath:mapper/*.xml
   type-aliases-package: com.assetmanager.domain
+  configuration:
+    map-underscore-to-camel-case: true
 
 # PageHelper 설정
 pagehelper:
