--- a/build.gradle
+++ b/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // OAuth2 Client for social login
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     
     // Development Tools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
