--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -58,6 +58,28 @@ server:
     session:
       timeout: 30m
 
+security:
+  oauth2:
+    client:
+      registration:
+        google:
+          client-id: your-google-client-id
+          client-secret: your-google-client-secret
+          scope: [email, profile]
+        kakao:
+          client-id: your-kakao-client-id
+          client-secret: your-kakao-client-secret
+          authorization-grant-type: authorization_code
+          redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+          client-name: Kakao
+          scope: [profile_nickname, account_email]
+      provider:
+        kakao:
+          authorization-uri: https://kauth.kakao.com/oauth/authorize
+          token-uri: https://kauth.kakao.com/oauth/token
+          user-info-uri: https://kapi.kakao.com/v2/user/me
+          user-name-attribute: id
+
 # JWT 설정
 jwt:
   secret: mySecretKey
